--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,4 +1,5 @@
   <tr>
+        <td><%= image_tag pin.image(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= link_to 'Show', pin %></td>
         <% if current_user == pin.user %>
@@ -6,3 +7,5 @@
 	        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 	      <% end %>
   </tr>
+
+
