--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,10 +1,8 @@
-<% if user_signed_in? %>
-	<h1> You're Logged In</h1>
-<% else %>
-
+<% unless user_signed_in? %>
 	<div class="hero-unit">
 		<h1>Welcome to One Month Rails!</h1>
-		<p>You've found the home page for my
+		<p>
+			You've found the home page for my
 				<%= link_to "One Month Rails", "http://onemonthrails.com" %>
 				application
 		</p>
@@ -12,5 +10,4 @@
 			<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-primary btn-large" %>
 		</p>
 	</div> 
-
 <% end %> 
