Add jQuery Masonry late

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,9 +1,9 @@
 <% unless user_signed_in? %>
 	<div class="hero-unit">
-		<h1>Welcome to One Month Rails!</h1>
+		<h1>Welcome to Hoopla!</h1>
 		<p>
 			You've found the home page for my
-				<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+				<%= link_to "Hoopla", "http://hupelah.com" %>
 				application
 		</p>
 		<p>
