--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,39 @@
-<h1>About</h1>
-<p>
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-	is a project to teach
-	<%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
-	in one month. This is the sample application.
-</p>
+<h1>About Hupelah</h1>
+
+<div class="container narrow">
+	<hr>
+
+	      <div class="jumbotron">
+	        <h1>Find things to do specific to your area and interests!</h1>
+	        <p class="lead">Find + Create + Share the coolest things to do in your area, Collaborate + Compile bucketlists with your friends, and find out what your options are right now!</p>
+	        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+	      </div>
+
+	      <hr>
+
+	      <div class="row-fluid marketing">
+	        <div class="span6">
+	          <h4>Create</h4>
+	          <p>Thinking of your favorite game you and your friends made up, or a secret spot that you love to kick it at? Create a Hupelah and mark it as yours, and then share the love so we can enjoy it too.</p>
+
+	          <h4>Find</h4>
+	          <p>Feeling Active? Adventurous? Relaxed? Social? Find the perfect thing to do based on your Location, Time, Mood, and Ambitions. Do time sensitive things right now, or save a cool idea for this weekend to one of your bucketlists.</p>
+
+	          <h4>Be Spontaneous</h4>
+	          <p>Are you super bored and don't know what to do? Take a chance, commit, be proactive, and let us randomly choose something for you. Or see what your friends are doing this very moment, planning on doing, or just some awesome thing going on for everybody that you don't want to miss.</p>
+	        </div>
+
+	        <div class="span6">
+	          <h4>Compile</h4>
+	          <p>Find something awesome to do, or have an awesome idea but no time to do it right now? Add that idea to a custom, private or public, 'bucketlist' of your choice. Like a playlist, but more fun.</p>
+
+	          <h4>Collaborate</h4>
+	          <p>You have some friends that you would do some things with, and other friends that you would do other things with. Share the right types of lists with the right types of people, Do things together, Enjoy life more. </p>
+
+	          <h4>Be Interesting</h4>
+	          <p>Nobody really cares about your facebook pictures. It is what you do that makes you an interesting person. Prove to us that you are interesting by creating, sharing, and marking Hupelahs complete. This could be quite fun to look back on in a few years.</p>
+	        </div>
+	      </div>
+
+	      <hr>
+</div>
