--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -4,7 +4,7 @@
 
 $btnPrimaryBackground: green;
 $navbarBackgroundHighlight: white;
-$navbarBackground: white;
+
 
 @import 'bootstrap';
 
@@ -14,10 +14,7 @@ body {
 
 @import 'bootstrap-responsive';
 
-.navbar-inner {
-	@include box-shadow(none !important);
-	border: 0;
-}
+
 
 .footer {
 	margin-top: 50px;
@@ -53,3 +50,40 @@ body {
 .description {
 	margin: 10px 0 5px;
 }
+
+
+ body {
+        padding-top: 50px;
+        padding-bottom: 40px;
+      }
+
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        margin: 60px 0;
+        text-align: center;
+      }
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
+      }
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
+      }
+
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
