Fixed About Sign-Up Button

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,9 @@
 	      <div class="jumbotron">
 	        <h1>Find things to do specific to your area and interests!</h1>
 	        <p class="lead">Find + Create + Share the coolest things to do in your area, Collaborate + Compile bucketlists with your friends, and find out what your options are right now!</p>
-	        <a class="btn btn-large btn-success" href="#">Sign up today</a>
+	        <a 
+	        	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %> 
+	        </a>
 	      </div>
 
 	      <hr>
